-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.17.0
-
None
-
3
-
9223372036854775807
When a persistent nodemap has an alternate fileset defined, and a dynamic nodemap is created with that persistent nodemap as a parent, it is able to set a primary fileset outside of the parent's fileset restrictions with "lctl nodemap_set_fileset".
Expected behavior: "lctl nodemap_set_fileset" should stay within the parent's namespace restrictions defined by its fileset.