LU-19426 nodemap: check parent when setting fileset

When a parent nodemap only has alternate filesets set, then child
dynamic nodemaps can set any primary fileset even if it is outside the
parent's namespace restrictions by using "lctl nodemap_set_fileset".

This patch fixes this by repositioning "check_fileset_add_vs_parent()"
when setting a fileset to stay within namespace defined by the
parent's filesets.

Fixes: e8c244e81e ("LU-17431 nodemap: fileset inheritance for dynamic nodemap")
Test-Parameters: trivial testlist=sanity-sec
Signed-off-by: Marc Vef <mvef@whamcloud.com>
Change-Id: I392ca834f30d38ac1b32e8fa7c713f56d295b1e5
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61554
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Tested-by: jenkins <devops@whamcloud.com>